# beye

./: .gitignore  .travis.yml  Makefile.am  README.md  addendum.c  bconsole.c  bconsole.h  beye.c  beyehelp.c  beyehelp.h  beyeutil.c  beyeutil.h  biew.c  biew.pi  biew.pr  biewhelp.c  biewhelp.h  biewutil.c  biewutil.h  bin_util.c  bin_util.h  bmfile.c  bmfile.h  bootstrap  bswap.h  codeguid.c  codeguid.h  colorset.c  colorset.h  configure  configure.ac  dialogs.c  editor.h  editors.c  events.c  fileutil.c  info_win.c  mainloop.c  make_qnx.inc  makefile  (+10 more)
addons/sys/: ascii.c  consinfo.c  cpu_perf.c  inview.c
addons/tools/: dig_conv.c  eval.c
biewlib/: bbio.c  bbio.h  biewlib.c  biewlib.h  file_ini.c  file_ini.h  kbd_code.h  pmalloc.c  pmalloc.h  tw_class.c  tw_class.h  twin.c  twin.h
biewlib/sysdep/: __config.h  __os_dep.h  _hrd_inf.h  _sys_dep.h
biewlib/sysdep/generic/: __config.h  _inlines.h  cpu_info.c
biewlib/sysdep/generic/linux/: kbd_code.h  mmfio.c  vio.c
biewlib/sysdep/generic/posix/: fileio.c  misc.c  timer.c
biewlib/sysdep/generic/unix/: con_slang.h  con_vt100.h  console.h  curses.c  kbd_code.h  keyboard.c  misc.c  mouse.c  nls.c  os_dep.c  slang.c  vio.c  vt100.c
biewlib/sysdep/ia16/: __config.h  _inlines.h  aclib.c  cmn_ix86.c  cpu_info.c  endian.h
biewlib/sysdep/ia16/dos/: fileio.c  kbd_code.h  keyboard.c  misc.c  mmfio.c  mouse.c  nls.c  os_dep.c  timer.c  vio.c
biewlib/sysdep/ia16/os2/: fileio.c  keyboard.c  mouse.c  os_dep.c  timer.c  vio.c
biewlib/sysdep/ia16/win/: nls.c
biewlib/sysdep/ia32/: __config.h  _inlines.h  aclib.c  aclib_template.c  cpu_info.c  cpu_info.wc  fastcopy.h  mmx_defs.h  stdint.h
biewlib/sysdep/ia32/beos/: keyboard.c  mmfio.c
biewlib/sysdep/ia32/dos/: misc.c  os_dep.c  timer.c  vio.c
biewlib/sysdep/x86_64/: __config.h  _inlines.h  aclib.c  aclib_template.c  cpu_info.c  fastcopy.h  stdint.h
bin_rc/: beye.hlp  biew.hlp
bin_rc/skn/: assembly.skn  golded.skn  insight.skn  light.skn  standard.skn
bin_rc/syntax/: awk.stx  c.stx  cpp.stx  cxx.stx  diff.stx  fortran.stx  html.stx  java.stx  makefile.stx  pascal.stx  perl.stx  python.stx  sh.stx  sql.stx  syntax.stx  template.stx  xml.stx
bin_rc/xlt/: nothing.xlt  readme  xlt_cvt.c
bin_rc/xlt/russian/: alt2koi.xlt  alt2mac.xlt  alt2win.xlt  e2a.xlt  gost872a.xlt  ibm2alt.xlt  iso2alt.xlt  koi02alt.xlt  koi2alt.xlt  koi72alt.xlt  koi82_2a.xlt  koi8a2a.xlt  koi8e2a.xlt  mac2alt.xlt  mik2alt.xlt  win2alt.xlt
ci/: script.sh
doc/: beye.1  beye_en.txt  beye_ru.txt  beyespec  biew.1  biew_en.txt  biew_ru.txt  biewspec  compile.en  compile.ru  develop.en  develop.ru  file_id.diz  file_ini.en  file_ini.ru  licence.en  licence.ru  license.ru  release.txt  unix.txt
doc/doxygen/: doxyfile  mainpage.dox  readme.txt
hlp/: beyehlp.prj  biewhlp.prj  credits.htx  editor.htx  goto.htx  mainhelp.htx  readme.txt  search.htx  setup.htx
libbeye/: Makefile.am  bbio.c  bbio.h  beyelib.c  beyelib.h  file_ini.c  file_ini.h  kbd_code.h  pmalloc.c  pmalloc.h  tw_class.c  twin.c  twin.h
libbeye/sysdep/: __config.h  __os_dep.h  _hrd_inf.h  _sys_dep.h
libbeye/sysdep/generic/: __config.h  cpu_info.c
libbeye/sysdep/generic/linux/: keyboard.c  misc.c  mmfio.c  mouse.c  vio.c
libbeye/sysdep/generic/posix/: fileio.c  misc.c  mmfio.c
libbeye/sysdep/generic/unix/: con_curses.c  con_curses.h  con_slang.c  con_vt100.c  con_vt100.h  console.c  console.h  kbd_code.h  keyboard.c  misc.c  mouse.c  nls.c  os_dep.c  vio.c
libbeye/sysdep/generic/windows/: fileio.c  keyboard.c  misc.c  mmfio.c  mouse.c  nls.c  os_dep.c  timer.c  vio.c
libbeye/sysdep/ia16/: __config.h  cmn_ix86.c  cpu_info.c  stdint.h
libbeye/sysdep/ia16/dos/: fileio.c  kbd_code.h  mmfio.c  nls.c
libbeye/sysdep/ia16/os2/: keyboard.c  mouse.c  nls.c  timer.c  vio.c
libbeye/sysdep/ia16/win/: nls.c
libbeye/sysdep/ia32/: __config.h  _inlines.h  stdint.h
libbeye/sysdep/ia32/beos/: fileio.c  timer.c  vio.c
libbeye/sysdep/ia32/dos/: kbd_code.h  mouse.c  os_dep.c  timer.c
libbeye/sysdep/ia32/dos4gw/: fileio.c  keyboard.c  mmfio.c  mouse.c  os_dep.c
libbeye/sysdep/ia32/linux/: keyboard.c  misc.c  os_dep.c
libbeye/sysdep/ia32/os2/: mouse.c  os_dep.c
libbeye/sysdep/ia32/qnx/: 3rto3s.asm  keyboard.c  mmfio.c  nls.c  timer.c  vio.c
libbeye/sysdep/ia32/qnxnto/: console.h  mouse.c  nls.c  os_dep.c  ph_icon.h  vio.c
libbeye/sysdep/ia32/unix/: kbd_code.h
libbeye/sysdep/ia32/win32/: fileio.c  keyboard.c  misc.c  mmfio.c  mouse.c  nls.c  timer.c  vio.c
libbeye/sysdep/ppc/: _inlines.h
libbeye/sysdep/x86_64/: cpu_info.c  mmx_defs.h
libbeye/sysdep/x86_64/linux/: keyboard.c  misc.c  mmfio.c  mouse.c
libbeye/sysdep/x86_64/unix/: fileio.c  misc.c  os_dep.c  timer.c
libbeye/sysdep/x86_64/win32/: fileio.c  kbd_code.h  keyboard.c  misc.c  mmfio.c  mouse.c  vio.c
mk_files/: makefile.wc
mk_files/msvc/: biew.dsp  biew.dsw
plugins/: binmode.c  binmode.htx  disasm.c  disasm.h  hexmode.c  hexmode.h  hexmode.htx  textmode.c  textmode.h  textmode.htx
plugins/disasm/: null_da.c  null_da.htx
plugins/disasm/arm/: arm.c  arm.h  arm.htx  arm16.c  arm32.c  armsize.htx
plugins/disasm/avr/: avr.c  avr.h  avr.htx  avrsize.htx
plugins/disasm/ix86/: ix86.c  ix86.h  ix86.htx  ix86_fpu.c  ix86_fun.c  ix86size.htx  k86size.htx
plugins/disasm/java/: java.c  java.htx  javasize.htx
plugins/disasm/ppc/: ppc.c  ppc.h  ppc.htx  ppcsize.htx
plugins/nls/: russian.c
testlab/: misalign.c
testlab/disasm/x86/: 3dnow.asm  3dnow.dump  dos16.asm  dos16.dump  make.sh  x86_32.asm  x86_32.dump  x86_64.asm  x86_64.dump  xop.asm  xop.dump
testlab/file_ini/: finitest.c  finitest.pr  makefile  s.ini  so.ini  sou.ini  sour.ini  sourc.ini  source.ini  {source}.ini
testlab/lmf/: hello  hello.c
testlab/text/syntax/: test.c  test.py  test.sh
testlab/twin/: Makefile.am  makefile  twintest.c  twintest.pr
testlab/unicode/: e2k_uni.txt
testlab/uniwin/: make.test  uniwin.c
tools/beyehelp/: makefile
tools/biewhlp/: biewhlp.c  biewhlp.pr  makefile  readme.txt
tools/lzss/: lzss.c  lzss.pr  lzssutil.c  makefile  readme.txt
(+53 files in other folders)
