i386_unix_hardcoded = sysdep/generic/posix/fileio.c sysdep/generic/unix/keyboard.c sysdep/generic/unix/vio.c sysdep/generic/unix/con_vt100.c sysdep/generic/unix/os_dep.c sysdep/generic/unix/nls.c sysdep/ia16/dos/mmfio.c sysdep/generic/cpu_info.c sysdep/generic/unix/misc.c

noinst_LIBRARIES = libbeye.a
libbeye_a_SOURCES = bbio.c beyelib.c file_ini.c pmalloc.c tw_class.c twin.c bbio.h beyelib.h file_ini.h kbd_code.h pmalloc.h tw_class.h twin.h $(i386_unix_hardcoded)
